Pinning works, cookies don't work yet; need to fix semester 2 on mobile, make weekdays stick on top on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -180,6 +180,13 @@ body {
 }
 
 @media screen and (max-width: 1000px) {
+    canvas{
+        position: inherit !important;
+    }
+    .mapboxgl-canvas-container{
+        position: inherit !important;
+    }
+
     table {
         width: 100%;
     }
